# AlphaZeroCpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: game.cpp  game.h  main.cpp  model.h  monte_carlo_tree_search.cpp  monte_carlo_tree_search.h  trainer.cpp  trainer.h
test/: game_tests.cpp  mcts_tests.cpp  model_tests.cpp  test_runner.cpp
